--- a/src/Index.html
+++ b/src/Index.html
@@ -18,4 +18,5 @@
 </style>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="agenda.js" ></script>
 <script src="chart.js" ></script>
