--- a/src/Index.html
+++ b/src/Index.html
@@ -4,8 +4,10 @@
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 />
-<link rel="stylesheet" href="Style.css">
-<svg width="960" height="600"></svg>
+<link rel="stylesheet" href="Style.css" />
+<body>
+  <div id="graph"></div>
+</body>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="agenda.js" ></script>
-<script src="chart.js" ></script>
+<script src="agenda.js"></script>
+<script src="chart.js"></script>
